<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainliner"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/scrollv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/productname"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/proname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" >
            </EditText>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/barcodelabel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/barcode"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" >
                </EditText>
                
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="45sp"
                    android:layout_height="45sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:paddingBottom="3dp"
                    android:src="@drawable/barcode" />
                
            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/quantitylabel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" >
            </EditText>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/pricelabel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" >
            </EditText>

            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/savinptbtn"
                android:textSize="26sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>