<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainliner"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="left"
    android:gravity="left"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/scrollv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5sp" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/productname"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="3sp" >

                <Spinner
                    android:id="@+id/productslist"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="0.76"
                    android:gravity="left"
                    android:textSize="23sp" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:paddingBottom="3dp"
                    android:src="@drawable/addnew" />

                <ImageView
                    android:id="@+id/barcodeicon"
                    android:layout_width="45sp"
                    android:layout_height="45sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="3dp"
                    android:paddingBottom="3dp"
                    android:src="@drawable/barcode" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:orientation="horizontal"
                android:paddingLeft="3sp" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight=".10"
                    android:gravity="left"
                    android:padding="2dp"
                    android:text="@string/quantitylabel"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".40"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:padding="2dp"
                    android:text="1" >
                </EditText>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight=".10"
                    android:gravity="left"
                    android:paddingLeft="5dp"
                    android:text="@string/pricelabel"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".40"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:padding="2dp"
                    android:text="1" >
                </EditText>
            </LinearLayout>

            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/addlabl"
                android:textSize="26sp" />

            <ListView
                android:id="@+id/invoicelist"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
            </ListView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="3sp" >

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:padding="10sp"
                    android:text="@string/cancellabel"
                    android:textSize="26sp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:padding="10sp"
                    android:text="@string/savinptbtn"
                    android:textSize="26sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>