<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:text="@string/fromlabel"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp" >

            <Spinner
                android:id="@+id/account1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:textSize="23sp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.25"
                android:src="@drawable/addnew" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:text="@string/tolabel"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp" >

            <Spinner
                android:id="@+id/account2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:textSize="23sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.25"
                android:src="@drawable/addnew" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginLeft="5dp"
                android:gravity="right|center_vertical"
                android:text="@string/valuelable"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="140dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:textColor="@android:color/black"
                android:textSize="22sp" >
            </EditText>

            <ImageView
                android:id="@+id/calcimg"
                android:layout_width="30dp"
                android:layout_height="42dp"
                android:layout_gravity="right|center_vertical"
               android:src="@drawable/calculatoricon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginLeft="5dp"
                android:gravity="right|center_vertical"
                android:text="@string/operationdate"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/caltxt"
                android:layout_width="180dp"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/calimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:src="@drawable/caldicon" />
        </LinearLayout>

        <EditText
            android:id="@+id/comments"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_gravity="top|left"
            android:gravity="top|left"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textSize="16sp" >
        </EditText>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/savebtn"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight=".50"
                android:gravity="center"
                android:text="@string/savinptbtn"
                android:textColor="@android:color/black"
                android:textSize="26sp" />

            <Button
                android:id="@+id/quickoperation"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight=".50"
                android:gravity="center"
                android:text="@string/fastoperationlabel"
                android:textColor="@android:color/black"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>